<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    android:layout_height="match_parent"
    android:background="@color/dark_turquoise"
    tools:context=".InformationPanelActivity">

    <TextView
        android:id="@+id/textViewFullInfoHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_blue"
        android:text="@string/drag_full_information"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Информация о препарате" />

    <ScrollView
        android:id="@+id/scrollViewFullInfo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/textViewFullInfoHeading"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp">


        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/textView13"
            app:layout_constraintTop_toBottomOf="@+id/textViewFullInfoHeading">

            <EditText
                android:id="@+id/editTextChangeMark"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:maxLength="4"
                android:autofillHints=""
                android:hint="@string/edit_text_change_mark"
                android:inputType="numberDecimal"
                android:visibility="gone"
                tools:visibility="visible"
                tools:ignore="Suspicious0dp" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="5dp"
                android:background="@color/moray_eel"
                android:padding="2dp"
                android:textColor="@color/white"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="1dp"
                tools:layout_editor_absoluteY="584dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="5dp"
                android:background="@color/moray_eel"
                android:padding="2dp"
                android:textColor="@color/white"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="1dp"
                tools:layout_editor_absoluteY="584dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="5dp"
                android:background="@color/moray_eel"
                android:padding="2dp"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:layout_editor_absoluteX="1dp"
                tools:layout_editor_absoluteY="584dp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="5dp"
                android:background="@color/moray_eel"
                android:padding="2dp"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:layout_editor_absoluteX="1dp"
                tools:layout_editor_absoluteY="584dp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="5dp"
                android:background="@color/moray_eel"
                android:padding="2dp"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:layout_editor_absoluteX="1dp"
                tools:layout_editor_absoluteY="584dp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="5dp"
                android:background="@color/moray_eel"
                android:padding="2dp"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:layout_editor_absoluteX="1dp"
                tools:layout_editor_absoluteY="584dp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="5dp"
                android:background="@color/moray_eel"
                android:padding="2dp"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:layout_editor_absoluteX="1dp"
                tools:layout_editor_absoluteY="584dp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="5dp"
                android:background="@color/moray_eel"
                android:padding="2dp"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:layout_editor_absoluteX="1dp"
                tools:layout_editor_absoluteY="584dp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="5dp"
                android:background="@color/moray_eel"
                android:padding="2dp"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:layout_editor_absoluteX="1dp"
                tools:layout_editor_absoluteY="584dp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="5dp"
                android:background="@color/moray_eel"
                android:padding="2dp"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:layout_editor_absoluteX="1dp"
                tools:layout_editor_absoluteY="584dp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="5dp"
                android:background="@color/moray_eel"
                android:padding="2dp"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:layout_editor_absoluteX="1dp"
                tools:layout_editor_absoluteY="584dp" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="5dp"
                android:background="@color/moray_eel"
                android:padding="2dp"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:layout_editor_absoluteX="1dp"
                tools:layout_editor_absoluteY="584dp" />

            <TextView
                android:id="@+id/textViewPercent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="5dp"
                android:padding="2dp"
                android:shadowColor="@color/white"
                android:textAlignment="center"
                android:textColor="@color/translucent_white_50"
                android:textSize="100sp"
                tools:layout_editor_absoluteX="1dp"
                tools:layout_editor_absoluteY="584dp" />


        </LinearLayout>

    </ScrollView>

    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="4dp"
        android:background="@color/gentian_blue"
        android:padding="2dp"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView14"
        tools:layout_editor_absoluteX="1dp" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="4dp"
        android:background="@color/gentian_blue"
        android:padding="2dp"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView15"
        tools:layout_editor_absoluteX="1dp" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="4dp"
        android:background="@color/gentian_blue"
        android:padding="2dp"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView16"
        tools:layout_editor_absoluteX="1dp" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="4dp"
        android:background="@color/gentian_blue"
        android:padding="2dp"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonChangeMarkup"
        tools:layout_editor_absoluteX="1dp" />


    <Button
        android:id="@+id/buttonChangeMarkup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="1dp"
        android:text="@string/button_change_markup"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/buttonResetMarkup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="1dp"
        android:text="@string/button_reset_markup"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>